fix vertical-scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 body {
     width: 100vw;
     height: 100vh;
+    max-width:100%;
     margin: 0;
 
     color: #e5e5e5;
